--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -5,6 +5,10 @@
   <title>Lesson1</title>
 </head>
 <body>
-<script src="1.js"></script>
+<!--<script src="1.js"></script>-->
+<script src="2.js"></script>
+<script src="3.js"></script>
+<script src="4.js"></script>
+<script src="5.js"></script>
 </body>
 </html>
