--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script src="1.js"></script>
-<script src="2.js"></script>
+<script srsc="2.js"></script>
 <script src="3.js"></script>
 <script src="4.js"></script>
 <script src="5.js"></script>
