--- a/lesson6/1-3/index.html
+++ b/lesson6/1-3/index.html
@@ -1,3 +1,10 @@
+<!--1. Доработать функцию замены картинки в галерее таким образом, чтобы она проверяла наличие большой-->
+<!--картинки по указанному в src адресу. Если такой картинки не существует или она не доступна, то должна-->
+<!--ставиться картинка-заглушка сообщающая об ошибке.-->
+
+<!--*. Добавить в галерею функцию перехода к следующему изображению. По сторонам от большой картинки-->
+<!--должны быть стрелки “вперед” и “назад”, по нажатию на которые происходит замена изображения на-->
+<!--следующее или предыдущее.-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
