--- a/lesson6/2/index.html
+++ b/lesson6/2/index.html
@@ -1,3 +1,6 @@
+<!--2. Реализовать модуль корзины. У каждого товара есть кнопка «Купить», при нажатии на которую-->
+<!--происходит добавление имени и цены товара в блок корзины. Корзина должна уметь считать-->
+<!--общую сумму заказа. Один товар можно добавить несколько раз.-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
